[ADD] roomの一覧取得追加
